# shinebot

./: .gitignore  Cargo.toml  README.md  database.db
.sqlx/: query-5794bdcbf4899ef03bb98cb767ea7eb7b2b1f8d4f81ad65a39c353049b35f1d6.json  query-745040f5c214eb5c933ba33fd972301e60c4aa70916d48b82460ac8a1574e945.json  query-9064a0c7eab7a591d6c1a7790aa42f84fbff543ea132cbe61be12b1a9f5e2257.json  query-b6415e38beacd63adc71335be9c7bb6d02a4b08052a45c1750f70a72bacb96f1.json
docs/: utilbot.md
migrations/: 20250326171057_todos.sql  20250617201449_busses.sql  20250918224204_lastfm.sql  20250919180808_roll.sql  20250919181423_lfm_extra.sql
src/: main.rs
src/commands/: meta.rs  mod.rs  owner.rs  time.rs
src/commands/bus/: prefix.rs  stops.json
src/commands/music/: prefix.rs
src/commands/roll/: prefix.rs
src/commands/time/: prefix.rs
src/commands/weather/: mod.rs  prefix.rs
