[package]
name = "discord_todo"
version = "0.1.0"
authors = ["luc mayor"]
edition = "2021"

[dependencies]
chrono = "0.4.39"
dotenv = "0.15.0"
phf = { version = "0.11.3", features = ["macros"] }
regex = "1.11.1"
tokio = {version = "1.43.0", features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dependencies.serenity]
version = "0.12.4"
git = "https://github.com/serenity-rs/serenity.git"
features = ["framework", "standard_framework"]
