[package]
name = "discord_todo"
version = "0.1.0"
authors = ["luc mayor"]
edition = "2021"

[dependencies]
anyhow = "1.0.96"
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
humantime = "2.1.0"
phf = { version = "0.11.3", features = ["macros"] }
rand = "0.9.1"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] } 
serde_json = "1.0.140"
sqlx = {version = "0.8.3", features = [ "sqlite", "runtime-tokio", "tls-native-tls" ]}
text2num = "2.6.0"
tokio = {version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dependencies.serenity]
version = "0.12.4"
git = "https://github.com/serenity-rs/serenity.git"
features = ["framework", "standard_framework", "client", "gateway", "rustls_backend", "model", "cache"]
